# analise-potencial-eolico-ods7

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dados/processed/: A303_2025_2026_limpo.csv
dados/raw/: A303_2025.csv  A303_2026.csv
src/: calculo_densidade.py  download_inmet.py  graficos.py  main.py  potencial_total.py  rosa_dos_ventos.py  taylor_expansao.py  utils.py
test/: test_densidade.py  test_graficos.py  test_potencial.py  test_rosa.py  test_taylor.py  test_utils.py
